<resources>
    <string name="app_name">Times Tables</string>

    <string name="end_question">%1$d × %2$d = %3$d</string>
    <string name="end_rosette_average_1">LIGHTNING</string>
    <string name="end_rosette_average_2">SIXTH GEAR</string>
    <string name="end_rosette_average_3">ON FIRE</string>
    <string name="end_rosette_average_4">GETTING MOVING</string>
    <string name="end_rosette_average_hint">Achieved a Sub %1$s average speed!</string>
    <string name="end_rosette_all_1">FLAWLESS</string>
    <string name="end_rosette_all_2">CLEAN RUN</string>
    <string name="end_rosette_all_3">PERFECT 3</string>
    <string name="end_rosette_all_4">UNTOUCHABLE</string>
    <string name="end_rosette_all_hint">All questions answered in under %1$s!</string>
    <string name="end_rosette_dev_1">FLOW STATE</string>
    <string name="end_rosette_dev_2">METRONOME</string>
    <string name="end_rosette_dev_3">UNWAVERING</string>
    <string name="end_rosette_dev_4">STEADY RHYTHM</string>
    <string name="end_rosette_dev_hint">Consistency of less than %1$s!</string>
    <string name="end_title">Game Summary</string>
    <string name="end_title_problems">PROBLEMS SOLVED</string>
    <string name="end_stat_player">Player:</string>
    <string name="end_stat_table">Max Table:</string>
    <string name="end_stat_questions">Problems Answered:</string>
    <string name="end_stat_speed">Average Speed:</string>
    <string name="end_stat_consistency">Consistency (Std Dev):</string>
    <string name="end_button_done">DONE</string>
    <string name="end_record_overall_best">New Record Time!</string>
    <string name="end_record_personal_best">New Personal Best!</string>
    
    <string name="game_question">%1$d × %2$d = </string>
    <string name="game_keypad_1">1</string>
    <string name="game_keypad_2">2</string>
    <string name="game_keypad_3">3</string>
    <string name="game_keypad_4">4</string>
    <string name="game_keypad_5">5</string>
    <string name="game_keypad_6">6</string>
    <string name="game_keypad_7">7</string>
    <string name="game_keypad_8">8</string>
    <string name="game_keypad_9">9</string>
    <string name="game_keypad_0">0</string>
    <string name="game_keypad_delete">⌫</string>
    <string name="game_keypad_clear">[C]</string>
    <string name="game_button_end">End Run</string>
    <string name="game_ready">Ready…</string>
    
    <string name="history_total_games">Total Games: %1$d</string>
    <string name="history_total_games_empty">Total Games: 0</string>
    <string name="history_average_speed">Overall Avg Speed: %1$s</string>
    <string name="history_average_speed_empty">Overall Avg Speed: -</string>
    <string name="history_best_speed">Personal Best Speed: %1$s</string>
    <string name="history_best_speed_empty">Personal Best Speed: -</string>
    <string name="history_average_consistency">Avg Consistency (dev): %1$s</string>
    <string name="history_average_consistency_empty">Avg Consistency (dev): -</string>
    <string name="history_title">Performance Dashboard</string>
    <string name="history_tab_games">Previous Games</string>
    <string name="history_tab_graph">Graph</string>
    <string name="history_filter_date_all">All</string>
    <string name="history_filter_date_month">Month</string>
    <string name="history_filter_date_week">Week</string>
    <string name="history_filter_date_today">Today</string>
    <string name="history_filter_table">Max Table:</string>
    <string name="history_filter_table_hint">All</string>
    <string name="history_filter_player">Player Name:</string>
    <string name="history_filter_player_hint">All Players</string>

    <string name="history_game_player">Player: %1$s</string>
    <string name="history_game_table">Max Table: %1$d</string>
    <plurals name="history_game_question">
        <item quantity="one">%1$d Question</item>
        <item quantity="other">%1$d Questions</item>
    </plurals>
    <string name="history_game_speed">%1$s avg</string>
    <string name="history_game_consistency">%1$s dev</string>

    <string name="main_toast_table_empty">Enter a value for Max Table</string>
    <string name="main_toast_table_nan">Max table should be a number</string>
    <string name="main_toast_table_negative">Max table should be at least 1</string>
    <string name="main_toast_questions_empty">Enter a value for # of Questions</string>
    <string name="main_toast_questions_nan">Question Count should be a number</string>
    <string name="main_toast_questions_negative">Question Count should be at least 1</string>
    <string name="main_toast_infinite_table_empty">Enter a value for Focus Table Target</string>
    <string name="main_toast_infinite_table_nan">Focus Table Target should be a number</string>
    <string name="main_toast_infinite_table_negative">Focus Table Target should be at least 1</string>
    <string name="main_input_table">Maximum Table</string>
    <string name="main_input_table_hint">e.g. 12</string>
    <string name="main_input_questions"># of Questions</string>
    <string name="main_input_questions_hint">e.g. 10</string>
    <string name="main_input_player">Player Name</string>
    <string name="main_input_player_hint">GUEST</string>
    <string name="main_input_infinite_focus">Focus Table Target</string>
    <string name="main_input_infinite_focus_hint">e.g. 13</string>
    <string name="main_button_start">Start</string>
    <string name="main_button_history"><![CDATA[View History & Stats]]></string>
    <string name="main_button_start_infinite">Start Infinite Run</string>
    <string name="main_infinite_title">FOCUSED INFINITE MODE</string>

    <string name="question_duration">%1$ss</string>
</resources>