<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:text="@string/history_title"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="4dp"
            android:text="@string/history_filter_date_all"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            tools:backgroundTint="@color/primary"
            tools:textColor="@color/background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="4dp"
            android:text="@string/history_filter_date_month"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            tools:backgroundTint="@color/container_primary"
            tools:textColor="@color/button_deselected_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="4dp"
            android:text="@string/history_filter_date_week"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            tools:backgroundTint="@color/container_primary"
            tools:textColor="@color/button_deselected_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="4dp"
            android:text="@string/history_filter_date_today"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            tools:backgroundTint="@color/container_primary"
            tools:textColor="@color/button_deselected_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/container_primary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/stat_total_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/history_total_games_empty"
            android:textColor="@color/simple_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stat_avg_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/history_average_speed_empty"
            android:textColor="@color/simple_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stat_best_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/history_best_speed_empty"
            android:textColor="@color/speed"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stat_avg_deviation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_average_consistency_empty"
            android:textColor="@color/consistency"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@color/container_primary"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/history_filter_table"
                android:textColor="@color/simple_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_filter_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:hint="@string/history_filter_table_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_text"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:paddingHorizontal="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/history_filter_player"
                android:textColor="@color/simple_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_filter_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="personName"
                android:background="@color/background"
                android:hint="@string/history_filter_player_hint"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_text"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/historyTabLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@color/container_primary"
        app:tabPaddingTop="0dp"
        app:tabPaddingBottom="0dp"
        app:tabIndicatorColor="@color/primary"
        app:tabSelectedTextColor="@color/primary"
        app:tabTextColor="@color/simple_text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_tab_games" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_tab_graph" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_history_row" />
</LinearLayout>